update exos + recompile -- RO2

--- a/src/HAI820I_Complements_RO/tds/exos/exo_08.tex
+++ b/src/HAI820I_Complements_RO/tds/exos/exo_08.tex
@@ -12,6 +12,16 @@
 % ----- Solutions exo 8 ----- %
 \iftoggle{showsolutions}{ 
 	\begin{td-sol}[]\ % 8
-		
+		On a les 5 inégalités suivantes:
+		\begin{equation*}
+			\begin{aligned}
+				\sum_{i=1}^5 x_i &\leq 4 \\
+				x_2 + x_4 \geq 1\\
+				x_1 + x_3 + x_5 \leq 2\\ 
+				x_1 \leq x_2\\
+				x_1 \leq x_4\\
+				x_3 \leq x_2\\ 
+			\end{aligned}
+		\end{equation*}
 	\end{td-sol}
 }{}
