--- a/src/HAI820I_Complements_RO/tds/exos/exo_09.tex
+++ b/src/HAI820I_Complements_RO/tds/exos/exo_09.tex
@@ -12,6 +12,9 @@
 % ----- Solutions exo 9 ----- %
 \iftoggle{showsolutions}{ 
 	\begin{td-sol}[]\ % 9
-		
+		On a l'inégalité suivante:
+		\begin{equation*}
+			x \leq 5y
+		\end{equation*}
 	\end{td-sol}
 }{}
