--- a/src/HAI820I_Complements_RO/tds/exos/exo_10.tex
+++ b/src/HAI820I_Complements_RO/tds/exos/exo_10.tex
@@ -12,6 +12,6 @@
 % ----- Solutions exo 10 ----- %
 \iftoggle{showsolutions}{ 
 	\begin{td-sol}[]\ % 10
-		
+		On n'a pas su trouver d'inégalité valide pour cet ensemble. 
 	\end{td-sol}
 }{}
