--- a/src/HAI820I_Complements_RO/tds/exos/exo_14.tex
+++ b/src/HAI820I_Complements_RO/tds/exos/exo_14.tex
@@ -14,6 +14,10 @@
 % ----- Solutions exo 14 ----- %
 \iftoggle{showsolutions}{ 
 	\begin{td-sol}[]\ % 14
-		
+		\begin{itemize}
+			\item Une coupe \(ax \leq \alpha\) est dite plus profonde qu'une coupe \(a'x \leq \alpha'\) si elle élimine un plus grand nombre de points non entiers que la coupe \(a'x \leq \alpha'\). En d'autres termes, la coupe plus profonde est plus restrictive et réduit davantage l'ensemble des solutions possibles, ce qui peut conduire à une meilleure approximation de l'enveloppe convexe des solutions entières.
+
+			\item 
+		\end{itemize}
 	\end{td-sol}
 }{}
