--- a/src/HAI820I_Complements_RO/tds/exos/exo_14.tex
+++ b/src/HAI820I_Complements_RO/tds/exos/exo_14.tex
@@ -17,7 +17,11 @@
 		\begin{itemize}
 			\item Une coupe \(ax \leq \alpha\) est dite plus profonde qu'une coupe \(a'x \leq \alpha'\) si elle élimine un plus grand nombre de points non entiers que la coupe \(a'x \leq \alpha'\). En d'autres termes, la coupe plus profonde est plus restrictive et réduit davantage l'ensemble des solutions possibles, ce qui peut conduire à une meilleure approximation de l'enveloppe convexe des solutions entières.
 
-			\item 
+			\item On peut trouver (dans ce cas graphiquement) les coupes suivantes:
+			\begin{itemize}
+				\item Pour l'exercice~\ref{exos:exo_15}, la coupe optimale est \(x_2 \leq -2x_1 + 6\) (en magenta sur la figure~\ref{fig:td1_ex15_f1}).
+				\item Pour l'exercice~\ref{exos:exo_16}, la coupe optimale est \(x_1 + x_2 \leq 3\) (en magenta sur la figure~\ref{fig:td1_ex16_f1}).
+			\end{itemize}
 		\end{itemize}
 	\end{td-sol}
 }{}
