--- a/src/HAI820I_Complements_RO/tds/exos/exo_16.tex
+++ b/src/HAI820I_Complements_RO/tds/exos/exo_16.tex
@@ -15,6 +15,71 @@
 % ----- Solutions exo 16 ----- %
 \iftoggle{showsolutions}{ 
 	\begin{td-sol}[]\ % 16
-		
+		On commence par résoudre la relaxation linéaire du programme linéaire en nombres entiers avec le simplexe.
+		On obtient le tableau suivant:
+		%
+		\begin{center}
+			\begin{tabular}{|ccc|cccc|} % chktex 44
+				\hline  % chktex 44
+				\, & \, &\(c\)&\(3\)&\(4\)&\(0\)&\(0\)\\
+				\hline % chktex 44
+				\multicolumn{1}{|c|}{\(c^J\)}& \multicolumn{2}{c|}{variables de base}&\(x_1\)&\(x_2\)&\(x_3\)&\(x_4\)\\
+				\hline % chktex 44
+				\multicolumn{1}{|c|}{\(0\)}& \multicolumn{1}{c|}{\(x_1^{1} = x_3\)}&\(6\)&\(2\)&\(1\)&\(1\)&\(0\)\\
+				\hline % chktex 44
+				\multicolumn{1}{|c|}{\(0\)}& \multicolumn{1}{c|}{\(x_2^{1} = x_4\)}&\(9\)&\(2\)&\(3\)&\(0\)&\(1\)\\
+				\hline % chktex 44
+				\multicolumn{1}{|c|}{} & \(z(x)\) & \multicolumn{1}{|c|}{\(0\)}& \(-3\) & \(-4\) & \(0\) & \(0\)\\
+				\hline % chktex 44
+			\end{tabular}
+		\end{center}
+
+		On rentre \(x_2\) en base et on sort \(x_4\) de base.
+		On obtient le tableau suivant:
+		\begin{center}
+			\begin{tabular}{|ccc|cccc|} % chktex 44
+				\hline  % chktex 44
+				\, & \, &\(c\)&\(3\)&\(4\)&\(0\)&\(0\)\\
+				\hline % chktex 44
+				\multicolumn{1}{|c|}{\(c^J\)}& \multicolumn{2}{c|}{variables de base}&\(x_1\)&\(x_2\)&\(x_3\)&\(x_4\)\\
+				\hline % chktex 44
+				\multicolumn{1}{|c|}{\(0\)}& \multicolumn{1}{c|}{\(x_1^{1} = x_3\)}&\(3\)&\(4/3\)&\(0\)&\(1\)&\(-1/3\)\\
+				\hline % chktex 44
+				\multicolumn{1}{|c|}{\(4\)}& \multicolumn{1}{c|}{\(x_2^{1} = x_2\)}&\(3\)&\(2/3\)&\(1\)&\(0\)&\(1/3\)\\
+				\hline % chktex 44
+				\multicolumn{1}{|c|}{} & \(z(x)\) & \multicolumn{1}{|c|}{\(12\)}& \(-1/3\) & \(0\) & \(0\) & \(4/3\)\\
+				\hline % chktex 44
+			\end{tabular}
+		\end{center}
+
+		On rentre \(x_1\) en base et on sort \(x_3\) de base.
+		On obtient le tableau suivant:
+		\begin{center}
+			\begin{tabular}{|ccc|cccc|} % chktex 44
+				\hline  % chktex 44
+				\, & \, &\(c\)&\(3\)&\(4\)&\(0\)&\(0\)\\
+				\hline % chktex 44
+				\multicolumn{1}{|c|}{\(c^J\)}& \multicolumn{2}{c|}{variables de base}&\(x_1\)&\(x_2\)&\(x_3\)&\(x_4\)\\
+				\hline % chktex 44
+				\multicolumn{1}{|c|}{\(3\)}& \multicolumn{1}{c|}{\(x_1^{1} = x_1\)}&\(9/4\)&\(1\)&\(0\)&\(3/4\)&\(-1/4\)\\
+				\hline % chktex 44
+				\multicolumn{1}{|c|}{\(4\)}& \multicolumn{1}{c|}{\(x_2^{1} = x_2\)}&\(3/2\)&\(0\)&\(1\)& \(-1/2\) & \(1/2\)\\
+				\hline % chktex 44
+				\multicolumn{1}{|c|}{} & \(z(x)\) & \multicolumn{1}{|c|}{\(51/4\)}& \(0\) & \(0\) & \(1/4\) & \(5/4\)\\
+				\hline % chktex 44
+			\end{tabular}
+		\end{center}
+		Tous les coefficients sont positifs donc on a trouvé notre solution optimale:
+		\begin{equation*}
+			x^\ast = \left(\frac{9}{4}, \frac{3}{2}\right), z^\ast = \frac{51}{4}.
+		\end{equation*}
+
+		Ce problème peut être représenté graphiquement comme suit dans la figure~\ref{fig:td1_ex16_f1}:
+
+		\input{../assets/tikz/td1_ex16_f1.tex}
+
+		La meilleure coupe ici est la coupe \(x_1 + x_2 \leq 3\) (en magenta sur la figure~\ref{fig:td1_ex16_f1}) qui élimine le point optimal de la relaxation linéaire \(x^\ast = (9/4, 3/2)\) tout en conservant les points entiers réalisables.
+
+		La solution optimale du programme linéaire en nombres entiers devient alors \(x^\ast = (0,3)\) avec \(z^\ast = 12\).
 	\end{td-sol}
 }{}
